@@ -302,12 +302,13 @@ details. */
       162: New struct ifreq.  Export if_nametoindex, if_indextoname,
 	   if_nameindex, if_freenameindex.
       163: Export posix_madvise, posix_memalign.
+      164: Export shm_open, shm_unlink.
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 163
+#define CYGWIN_VERSION_API_MINOR 164
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
