@@ -1,3 +1,15 @@
+2007-02-08  Corinna Vinschen  <corinna@vinschen.de>
+
+	* cygwin.din (shm_open): Export.
+	(shm_unlink): Export.
+	* syscalls.cc (shm_open): New function.
+	(shm_unlink): New function.
+	* sysconf.cc (sca): Set value of _SC_SHARED_MEMORY_OBJECTS to
+	_POSIX_SHARED_MEMORY_OBJECTS.
+	* include/cygwin/version.h: Bump API minor number.
+	* include/sys/mman.h (shm_open): Add prototype.
+	(shm_unlink): Ditto.
+
 2007-02-08  Christopher Faylor <me@cgf.cx>
 	    Corinna Vinschen  <corinna@vinschen.de>
 
